fixed issue with overflow on how to and scroll on twitter for firefox

--- a/_sass/home/shopping_section.scss
+++ b/_sass/home/shopping_section.scss
@@ -160,6 +160,7 @@ section#how_to {
 section#how_to {
   position: relative;
   max-width: unset;
+  overflow: hidden;
   &:before {
     content: '';
     background: url('/assets/images/dev/how_to_warning.svg');
