--- a/_sass/main-items.scss
+++ b/_sass/main-items.scss
@@ -927,7 +927,7 @@ main {
     @include display_flex;
     @include direction_row;
     overflow: auto;
-    margin: -10px 0;
+    margin: -20px 0;
   }
   .ooo_twitter__inner {
     margin: 0;
